@@ -1,4 +1,5 @@
 mpdscribble 0.18 - not yet released
+  * improved detection of repeated songs
 
 
 mpdscribble 0.17 - 2009-03-02
